--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -1,5 +1,6 @@
 .gridListdemoBasicUsage md-grid-list {
-  margin: 8px; }
+  /*margin: 8px; */
+}
 .gridListdemoBasicUsage .gray {
   background: #f5f5f5; }
 .gridListdemoBasicUsage .green {
